# volsung

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Dockerfile.chatterbox  Dockerfile.coordinator  Dockerfile.indextts  Dockerfile.music  Dockerfile.qwen-base  Dockerfile.qwen-voice  Dockerfile.sfx  Dockerfile.styletts  Dockerfile.tts  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.hive/: issues.jsonl  memories.jsonl
requirements/services/: chatterbox.txt  indextts.txt  music.txt  qwen-base.txt  qwen-tts.txt  qwen-voice.txt  sfx.txt  styletts.txt  tts.txt
scripts/: start-all.sh  start-music.sh  start-sfx.sh  start-tts.sh
tests/: conftest.py  test_audio.py  test_base.py  test_music.py  test_sfx.py  test_stitcher.py  test_styletts2.py  test_tts.py
volsung/: __init__.py  __main__.py  config.py  server.py
volsung/audio/: __init__.py  effects.py  utils.py
volsung/models/: __init__.py  base.py  preload_manager.py  registry.py  types.py
volsung/music/: __init__.py  endpoints.py  manager.py  schemas.py
volsung/music/generators/: __init__.py  musicgen.py
volsung/services/: __init__.py  chatterbox_service.py  client.py  indextts_service.py  music_service.py  qwen_base_service.py  qwen_tts_service.py  qwen_voice_service.py  sfx_service.py  styletts_service.py  tts_service.py
volsung/sfx/: __init__.py  endpoints.py  manager.py  schemas.py
volsung/stitcher/: __init__.py  composer.py  endpoints.py  schemas.py
volsung/tts/: __init__.py  endpoints.py  manager.py  schemas.py
volsung/utils/: __init__.py  clear_cache.py
(+6 files in other folders)
